--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
+            android:theme="@style/SplashTheme"
             android:windowSoftInputMode="adjustNothing"
             android:screenOrientation="portrait">
             <intent-filter>
